Refactor and enhance admin editing features
Updated AppShell.xaml and AppShell.xaml.cs to include new routes for editing user, food recipe, and food type. Added new package reference in MAUIRecipeApp.csproj and updated MauiProgram.cs for new services. Introduced new properties in FoodRecipe.cs and User.cs. Enhanced AuthService.cs and FirestoreService.cs with new methods and checks.

Removed obsolete views and view models, including BackDropMainPageView, EditFoodRatingPageView, EditFoodRecipeMappingPageView, EditTempTablePageView, EditUserInfoPageView, and EditUserSavedRecipePageView.

Refactored EditFoodRecipePageView, EditFoodRecipeTypePageView, EditIngredientsPageView, and EditUserPageView to include search functionality and updated data grid columns. Updated corresponding code-behind files with new methods.

Enhanced UserInfoPageView with new password fields and validation. Updated UserInfoPageViewModel with new properties and commands for password management.

Added new ViewModel classes and XAML pages for editing food recipes, food types, and user information, utilizing CommunityToolkit.Mvvm and Google.Cloud.Firestore.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -142,9 +142,11 @@
                     Glyph="{x:Static m:MaterialSharp.Person}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="User" ContentTemplate="{DataTemplate AdminView:EditUserPageView}" />
-            <ShellContent Title="UserInfo" ContentTemplate="{DataTemplate AdminView:EditUserInfoPageView}" />
-            <ShellContent Title="UserSavedRecipe" ContentTemplate="{DataTemplate AdminView:EditUserSavedRecipePageView}" />
+            <ShellContent
+                Title="User"
+                ContentTemplate="{DataTemplate AdminView:EditUserPageView}"
+                Route="edituser" />
+
         </Tab>
     </FlyoutItem>
 
@@ -156,9 +158,15 @@
                     Glyph="{x:Static m:MaterialSharp.Lunch_dining}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="FoodRecipe" ContentTemplate="{DataTemplate AdminView:EditFoodRecipePageView}" />
-            <ShellContent Title="FoodRecipeType" ContentTemplate="{DataTemplate AdminView:EditFoodRecipeTypePageView}" />
-            <ShellContent Title="FoodRecipeMapping" ContentTemplate="{DataTemplate AdminView:EditFoodRecipeMappingPageView}" />
+            <ShellContent
+                Title="FoodRecipe"
+                ContentTemplate="{DataTemplate AdminView:EditFoodRecipePageView}"
+                Route="editfoodrecipe" />
+            <ShellContent
+                Title="FoodRecipeType"
+                ContentTemplate="{DataTemplate AdminView:EditFoodRecipeTypePageView}"
+                Route="editfoodtype" />
+
         </Tab>
 
     </FlyoutItem>
@@ -178,19 +186,7 @@
 
     </FlyoutItem>
 
-    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
-        <Tab Title="Other">
-            <Tab.Icon>
-                <FontImageSource
-                    FontFamily="MaterialSharp"
-                    Glyph="{x:Static m:MaterialSharp.Other_admission}"
-                    Color="{StaticResource WhiteText}" />
-            </Tab.Icon>
-            <ShellContent Title="FoodRating" ContentTemplate="{DataTemplate AdminView:EditFoodRatingPageView}" />
-            <ShellContent Title="Temptable" ContentTemplate="{DataTemplate AdminView:EditTempTablePageView}" />
-        </Tab>
 
-    </FlyoutItem>
 
     <MenuItem
         Command="{Binding HelpCommand}"
