--- a/View/AdminView/EditFoodRecipeTypePageView.xaml
+++ b/View/AdminView/EditFoodRecipeTypePageView.xaml
@@ -42,25 +42,14 @@
                     VerticalOptions="Center">
                     <Button
                         Background="Aqua"
+                        Clicked="Button_OnClicked"
                         FontAttributes="Bold"
                         TextColor="{StaticResource WhiteText}"
-                        ToolTipProperties.Text="Edit">
+                        ToolTipProperties.Text="Add">
                         <Button.ImageSource>
                             <FontImageSource
                                 FontFamily="MaterialSharp"
-                                Glyph="{x:Static m:MaterialSharp.Edit}"
-                                Size="20" />
-                        </Button.ImageSource>
-                    </Button>
-                    <Button
-                        Background="Lime"
-                        FontAttributes="Bold"
-                        TextColor="{StaticResource WhiteText}"
-                        ToolTipProperties.Text="Save">
-                        <Button.ImageSource>
-                            <FontImageSource
-                                FontFamily="MaterialSharp"
-                                Glyph="{x:Static m:MaterialSharp.Save}"
+                                Glyph="{x:Static m:MaterialSharp.Add}"
                                 Size="20" />
                         </Button.ImageSource>
                     </Button>
@@ -68,7 +57,9 @@
                 <material:TextField
                     Title="Search..."
                     Grid.Row="1"
+                    Grid.ColumnSpan="2"
                     AllowClear="True"
+                    TextChanged="TextField_OnTextChanged"
                     TextColor="{StaticResource Primary}">
                     <material:TextField.Icon>
                         <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Search}" />
@@ -91,19 +82,12 @@
                         <material:DataGridColumn.CellItemTemplate>
                             <DataTemplate>
                                 <Button
-                                    Background="PaleVioletRed"
+                                    x:DataType="models:FoodRecipeType"
+                                    Background="LightBlue"
+                                    Command="{Binding Path=EditFoodTypeCommand, Source={RelativeSource AncestorType={x:Type viewmodel:EditFoodRecipeTypePageViewModel}}}"
+                                    CommandParameter="{Binding Tofid}"
                                     HorizontalOptions="Center"
-                                    Text="Remove" />
-                            </DataTemplate>
-                        </material:DataGridColumn.CellItemTemplate>
-                    </material:DataGridColumn>
-                    <material:DataGridColumn Title="Is Deleted ?" Width="*">
-                        <material:DataGridColumn.CellItemTemplate>
-                            <DataTemplate x:DataType="models:FoodRecipeType">
-                                <material:CheckBox
-                                    HorizontalOptions="Center"
-                                    IsChecked="{Binding IsDeleted}"
-                                    IsEnabled="False" />
+                                    Text="Edit" />
                             </DataTemplate>
                         </material:DataGridColumn.CellItemTemplate>
                     </material:DataGridColumn>
