--- a/View/AdminView/EditUserPageView.xaml
+++ b/View/AdminView/EditUserPageView.xaml
@@ -35,40 +35,13 @@
                         VerticalOptions="Center" />
 
                 </HorizontalStackLayout>
-                <HorizontalStackLayout
-                    Grid.Column="1"
-                    HorizontalOptions="End"
-                    Spacing="8"
-                    VerticalOptions="Center">
-                    <Button
-                        Background="Aqua"
-                        FontAttributes="Bold"
-                        TextColor="{StaticResource WhiteText}"
-                        ToolTipProperties.Text="Edit">
-                        <Button.ImageSource>
-                            <FontImageSource
-                                FontFamily="MaterialSharp"
-                                Glyph="{x:Static m:MaterialSharp.Edit}"
-                                Size="20" />
-                        </Button.ImageSource>
-                    </Button>
-                    <Button
-                        Background="Lime"
-                        FontAttributes="Bold"
-                        TextColor="{StaticResource WhiteText}"
-                        ToolTipProperties.Text="Save">
-                        <Button.ImageSource>
-                            <FontImageSource
-                                FontFamily="MaterialSharp"
-                                Glyph="{x:Static m:MaterialSharp.Save}"
-                                Size="20" />
-                        </Button.ImageSource>
-                    </Button>
-                </HorizontalStackLayout>
+
                 <material:TextField
                     Title="Search..."
                     Grid.Row="1"
+                    Grid.ColumnSpan="2"
                     AllowClear="True"
+                    TextChanged="TextField_OnCompleted"
                     TextColor="{StaticResource Primary}">
                     <material:TextField.Icon>
                         <FontImageSource FontFamily="MaterialSharp" Glyph="{x:Static m:MaterialSharp.Search}" />
@@ -76,47 +49,83 @@
                 </material:TextField>
             </Grid>
 
-
-            <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding Users}">
-
-
-                <material:DataGrid.Columns>
-
-                    <material:DataGridColumn
-                        Title="Username"
-                        Width="1.5*"
-                        ValueBinding="{Binding Username}" />
-
-                    <material:DataGridColumn
-                        Title="Email"
-                        Width="1.5*"
-                        ValueBinding="{Binding Email}" />
-
-                    <material:DataGridColumn Title="Actions" Width="*">
-                        <material:DataGridColumn.CellItemTemplate>
-                            <DataTemplate>
-                                <Button
-                                    Background="PaleVioletRed"
-                                    HorizontalOptions="Center"
-                                    Text="Remove" />
-                            </DataTemplate>
-                        </material:DataGridColumn.CellItemTemplate>
-                    </material:DataGridColumn>
-                    <material:DataGridColumn Title="IsAdmin" Width="*">
-                        <material:DataGridColumn.CellItemTemplate>
-                            <DataTemplate x:DataType="models:User">
-                                <material:CheckBox
-                                    HorizontalOptions="Center"
-                                    IsChecked="{Binding isAdmin}"
-                                    IsEnabled="False" />
-                            </DataTemplate>
-                        </material:DataGridColumn.CellItemTemplate>
-                    </material:DataGridColumn>
-
-                </material:DataGrid.Columns>
-            </material:DataGrid>
+            <ScrollView Orientation="Horizontal">
+                <material:DataGrid Margin="16,0,16,0" ItemsSource="{Binding Users}">
 
 
+                    <material:DataGrid.Columns>
+
+                        <material:DataGridColumn
+                            Title="Username"
+                            Width="200"
+                            ValueBinding="{Binding Username}" />
+
+                        <material:DataGridColumn
+                            Title="Email"
+                            Width="500"
+                            ValueBinding="{Binding Email}" />
+
+                        <material:DataGridColumn
+                            Title="Height"
+                            Width="150"
+                            ValueBinding="{Binding Height}" />
+
+                        <material:DataGridColumn
+                            Title="Weight"
+                            Width="150"
+                            ValueBinding="{Binding Weight}" />
+
+                        <material:DataGridColumn
+                            Title="HealthCondition"
+                            Width="150"
+                            ValueBinding="{Binding HealthCondition}" />
+
+                        <material:DataGridColumn
+                            Title="Allergies"
+                            Width="150"
+                            ValueBinding="{Binding Allergies}" />
+
+
+
+                        <material:DataGridColumn Title="IsAdmin">
+                            <material:DataGridColumn.CellItemTemplate>
+                                <DataTemplate x:DataType="models:User">
+                                    <material:CheckBox
+                                        HorizontalOptions="Center"
+                                        IsChecked="{Binding isAdmin}"
+                                        IsEnabled="False" />
+                                </DataTemplate>
+                            </material:DataGridColumn.CellItemTemplate>
+                        </material:DataGridColumn>
+                        <material:DataGridColumn Title="IsDeactivated">
+                            <material:DataGridColumn.CellItemTemplate>
+                                <DataTemplate x:DataType="models:User">
+                                    <material:CheckBox
+                                        HorizontalOptions="Center"
+                                        IsChecked="{Binding isDeactivated}"
+                                        IsEnabled="False" />
+                                </DataTemplate>
+                            </material:DataGridColumn.CellItemTemplate>
+                        </material:DataGridColumn>
+                        <material:DataGridColumn Title="Actions">
+                            <material:DataGridColumn.CellItemTemplate>
+                                <DataTemplate>
+                                    <Button
+                                        x:DataType="models:User"
+                                        Background="LightBlue"
+                                        Command="{Binding Path=EditUserCommand, Source={RelativeSource AncestorType={x:Type viewmodel:EditUserPageViewModel}}}"
+                                        CommandParameter="{Binding Uid}"
+                                        HorizontalOptions="Center"
+                                        Text="Edit" />
+                                </DataTemplate>
+                            </material:DataGridColumn.CellItemTemplate>
+                        </material:DataGridColumn>
+
+                    </material:DataGrid.Columns>
+                </material:DataGrid>
+
+
+            </ScrollView>
 
 
         </VerticalStackLayout>
