--- a/View/UserView/UserSavedRecipesView.xaml
+++ b/View/UserView/UserSavedRecipesView.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:models="clr-namespace:MAUIRecipeApp.Models"
     xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.UserView"
+    xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     Title="Saved Recipes"
     x:DataType="viewmodel:UserSavedRecipesViewModel"
     Background="{StaticResource WhiteText}">
@@ -12,55 +13,105 @@
     <ScrollView>
         <VerticalStackLayout
             Margin="16"
-            Spacing="16">
+            Spacing="20">
 
-            <Label
-                FontAttributes="Bold"
-                FontSize="24"
-                Text="Your Saved Recipes"
-                TextColor="{StaticResource PrimaryDarkText}" />
+
+            <Grid
+                Grid.Row="0"
+                Margin="16,32,16,0"
+                VerticalOptions="Start">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="2*" />
+                </Grid.ColumnDefinitions>
+                <Button
+                    Grid.Column="0"
+                    Background="{StaticResource WhiteText}"
+                    BorderColor="{StaticResource PrimaryDarkText}"
+                    BorderWidth="0.1"
+                    Command="{Binding BackCommand}"
+                    HorizontalOptions="Start">
+                    <Button.ImageSource>
+                        <FontImageSource
+                            FontFamily="MaterialSharp"
+                            Glyph="{x:Static m:MaterialSharp.Arrow_back}"
+                            Color="{StaticResource PrimaryDarkText}" />
+                    </Button.ImageSource>
+                </Button>
+
+
+                <Label
+                    Grid.Column="1"
+                    HorizontalOptions="End"
+                    FontAttributes="Bold"
+                    FontSize="28"
+                    Text="Your Saved Recipes"
+                    TextColor="{StaticResource PrimaryDarkText}" />
+            </Grid>
 
             <CollectionView
                 ItemsSource="{Binding SavedRecipes}"
                 ItemsLayout="VerticalList">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:FoodRecipe">
-                        <Grid Padding="8">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="100" />
-                                <RowDefinition Height="75" />
-                            </Grid.RowDefinitions>
+                        <Frame
+                            Margin="0,8"
+                            CornerRadius="12"
+                            BorderColor="{StaticResource Gray200}"
+                            HasShadow="True"
+                            Padding="12"
+                            BackgroundColor="{StaticResource White}">
+                            <Frame.Shadow>
+                                <Shadow Brush="Black" Opacity="0.5" Offset="5,5" Radius="10" />
+                            </Frame.Shadow>
+                            <Grid ColumnSpacing="12">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="100" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="50" />
+                                </Grid.ColumnDefinitions>
 
-                            <ImageButton
-                                Grid.Row="0"
-                                Aspect="Fill"
-                                Command="{Binding Path=RecipeDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:UserSavedRecipesViewModel}}}"
-                                CommandParameter="{Binding Frid}"
-                                CornerRadius="20"
-                                Source="{Binding ImgUrl}" />
+                                <ImageButton
+                                    Grid.Row="0"
+                                    Aspect="AspectFill"
+                                    Command="{Binding Path=RecipeDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:UserSavedRecipesViewModel}}}"
+                                    CommandParameter="{Binding Frid}"
+                                    CornerRadius="20"
+                                    MaximumHeightRequest="100"
+                                    BackgroundColor="Transparent"
+                                    Source="{Binding ImgUrl}" />
 
-                            <VerticalStackLayout
-                                Grid.Row="1"
-                                Margin="8,8,0,0"
-                                Spacing="8">
-                                <Label
-                                    FontSize="18"
-                                    Text="{Binding RecipeName}"
-                                    TextColor="{StaticResource PrimaryDarkText}" />
-                                <HorizontalStackLayout Spacing="8">
+                                <VerticalStackLayout
+                                    Grid.Column="1"
+                                    Spacing="8">
                                     <Label
-                                        Text="{Binding Calories, StringFormat='{0} cals'}"
-                                        TextColor="{StaticResource Gray300}" />
+                                        FontAttributes="Bold"
+                                        FontSize="20"
+                                        Text="{Binding RecipeName}"
+                                        TextColor="{StaticResource PrimaryDarkText}" />
+
                                     <Label
-                                        Text="{Binding CookingTime, StringFormat='{0} mins'}"
-                                        TextColor="{StaticResource Gray300}" />
-                                </HorizontalStackLayout>
-                            </VerticalStackLayout>
-                        </Grid>
+                                            FontSize="14"
+                                            Text="{Binding Calories, StringFormat='{0} cals'}"
+                                            TextColor="{StaticResource PrimaryDarkText}" />
+                                    <Label
+                                            FontSize="14"
+                                            Text="{Binding CookingTime, StringFormat='{0} mins'}"
+                                            TextColor="{StaticResource PrimaryDarkText}" />
+                                </VerticalStackLayout>
+
+                                <ImageButton
+                                    Grid.Column="2"
+                                    Source="heart_filled.png"
+                                    Aspect="Center"
+                                    Command="{Binding Path=RemoveFromSavedRecipesCommand, Source={RelativeSource AncestorType={x:Type viewmodel:UserSavedRecipesViewModel}}}"
+                                    CommandParameter="{Binding Frid}"
+                                    BackgroundColor="Transparent" />
+                            </Grid>
+                        </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
